--- a/index.html
+++ b/index.html
@@ -4,18 +4,117 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HTML Crash Course</title>
-    <style>
-        p{
-            color:rgb(0, 255, 60);
-        }
-    </style>
+    <title>Document</title>
 </head>
 <body>
-    <h1>This is a heading</h1>
-    <h2>This is a subheading</h2>
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cumque, debitis? Corrupti porro, nobis temporibus consequatur ipsum saepe dolorum illum vel eveniet, ab eius dolor fuga officiis alias quis voluptatum soluta libero accusamus repudiandae! Praesentium vel laudantium quis beatae velit vero sunt nemo, eum at aut fugiat nihil mollitia doloribus libero corrupti illum debitis maiores. Odio fuga quam, repudiandae perferendis tempora tenetur facere. Sunt cum sed laboriosam soluta natus exercitationem rem necessitatibus voluptate ipsa. Iusto earum praesentium consequatur ut assumenda mollitia.</p>
-    <h2>Another subheading</h2>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta quibusdam, similique harum nisi a temporibus veritatis labore dolore, culpa itaque, voluptatibus porro sapiente inventore est architecto facilis aperiam ab mollitia quasi ipsam? Eius omnis officia repellat accusantium, harum sapiente, quae repudiandae possimus aperiam culpa, cum voluptates quam nisi aspernatur vel est voluptatum. Earum molestiae neque ad, eligendi, perferendis commodi doloremque illum error mollitia qui totam laborum. Eos, similique laudantium minus quae rem quam doloremque necessitatibus, dolore porro rerum magni itaque obcaecati iste. Molestias tenetur suscipit, quo eius, nesciunt, aliquid possimus porro laborum voluptate voluptates iusto! Animi porro blanditiis facilis vel?</p>
+    <h1>Heading One</h1>
+    <h2>Heading Two</h2>
+    <h3>Heading Three</h3>
+    <h4>Heading Four</h4>
+    <h5>Heading Five</h5>
+    <h6>Heading Six</h6>
+    <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio adipisci <strong> assumenda mollitia, suscipit, dolores sed qui nam atque architecto rem officia voluptas maiores </strong> voluptates cum? Ipsa rem unde delectus consectetur.
+    </p>
+    <p>
+        Lorem <a href="http://google.com" target="_blank">ipsum dolor sit amet consectetur </a>adipisicing elit. Culpa, ad quibusdam nesciunt, inventore velit laboriosam dolorem <em> fugiat perspiciatis voluptate deleniti odio beatae assumenda </em> illum totam. Quia atque eos soluta error!
+    </p>
+
+    <ul>
+        <li>List Item 1</li>
+        <li>List Item 2</li>
+        <li>List Item 3</li>
+        <li>List Item 4</li>
+    </ul>
+
+    <ol>
+        <li>List Item 1</li>
+        <li>List Item 2</li>
+        <li>List Item 3</li>
+        <li>List Item 4</li>
+    </ol>
+
+    <table>
+        <thead>
+            <tr>
+                <th>Name</th>
+                <th>Email</th>
+                <th>Age</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>Brad Traversy</td>
+                <td>brad@something.com</td>
+                <td>35</td>
+            </tr>
+            <tr>
+                <td>John Doe</td>
+                <td>john@something.com</td>
+                <td>45</td>
+            </tr>
+            <tr>
+                <td>Sara Williams</td>
+                <td>sara@something.com</td>
+                <td>25</td>
+            </tr>
+        </tbody>
+    </table>
+    <hr>
+    <form action="process.php" method="POST">
+        <div>
+            <label>First Name</label>
+            <input type="text" name="firstName" placeholder="Enter First Name">
+        </div>
+        <br>
+        <div>
+            <label>Last Name</label>
+            <input type="text" name="lastName">
+        </div>
+        <br>
+        <div>
+            <label>Message</label>
+            <textarea name="message"></textarea>
+        </div>
+        <br>
+        <div>
+            <label>Gender</label>
+            <select name="gender">
+                <option value="male">Male</option>
+                <option value="female">Female</option>
+                <option value="other">Other</option>
+            </select>
+        </div>
+        <br>
+        <div>
+            <label>Age:</label>
+            <input type="number" name="age" value="30">
+        </div>
+        <br>
+        <div>
+            <label>Birthday</label>
+            <input type="date" name="birthday">
+        </div>
+        <br>
+        <div>
+            <input type="submit" name="submit" value="Submit">
+        </div>
+    </form>
+
+    <button>Click Me</button>
+
+    <br>
+
+    <a href="Images/img.jpg">
+        <img src="Images/img.jpg" alt="My Sample Image" width="200">
+    </a>
+
+    <blockquote cite="http://traversymedia.com">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit repellendus sed quo officia? Aperiam provident natus, qui temporibus alias ratione aspernatur dolorum accusantium ea numquam perferendis incidunt veniam vero voluptatem.
+    </blockquote>
+
+    <p>The <abbr title="World Wide Web">WWW</abbr> is awesome</p>
+
+    <p><cite>HTML crash course</cite> by Brad Traversy</p>
 </body>
 </html>
