i amde the logo a logo

--- a/responsiveWebsite/home.html
+++ b/responsiveWebsite/home.html
@@ -10,7 +10,9 @@
 </head>
 <body>
     <div class="website">
-        <div class="logo">COSTCO</div>
+        <div class="logo">
+            <a href="home.html">COSTCO</a>
+        </div>
 
         <div class="searchbar">
             <input type="text" placeholder="Search.." size="60">
@@ -213,7 +215,7 @@
             </div>
         </div>
         <div class="footer">
-            
+
         </div>
     </div>
 </body>
