im done (i think)

--- a/responsiveWebsite/home.html
+++ b/responsiveWebsite/home.html
@@ -11,29 +11,29 @@
 <body>
     <div class="website">
         <div class="logo">
-            <a href="home.html">COSTCO</a>
+            <a href="home.html"><img src="Images/costco.png" alt=""></a>
         </div>
 
         <div class="searchbar">
-            <input type="text" placeholder="Search.." size="60">
+            <input type="text" placeholder="Search.." size="">
         </div>
 
         <div class="navbar">
             <ul class="nav">
                 <li>
-                    <a href="#">About Costco</a>
+                    <a href="about.html">About Costco</a>
                 </li>
                 <li>
-                    <a href="#">Shopping</a>
+                    <a href="best.html">Costco>>>>>>></a>
                 </li>
                 <li>
-                    <a href="#">Costco>>>></a>
+                    <a href="contact.html">Contact Us</a>
                 </li>
             </ul>
         </div>
 
         <div class="title-image">
-            <img src="Images/costcoAdOne.jpg" alt="" class="responsive">
+            <img src="Images/costcoAdOne.jpg" alt="" class="">
         </div>
 
         <div class="featured">
@@ -47,7 +47,7 @@
                     <p>$39.99</p>
                 </div>
                 <div class="title">
-                    <a href="#">Miniature Decorative Tree Model</a>
+                    <a href="http://fakebsod.com/windows-8-and-10">Miniature Decorative Tree Model</a>
                 </div>
                 <div class="star">
                     <span class="fa fa-star checked"></span>
@@ -63,7 +63,7 @@
                     <p>$299.99</p>
                 </div>
                 <div class="title">
-                    <a href="#">Blue and White Patterned Chair</a>
+                    <a href="http://fakebsod.com/windows-8-and-10">Blue and White Patterned Chair</a>
                 </div>
                 <div class="star">
                     <span class="fa fa-star checked"></span>
@@ -79,7 +79,7 @@
                     <p>$79.99</p>
                 </div>
                 <div class="title">
-                    <a href="#">Orante Japanese-style Decor Piece</a>
+                    <a href="http://fakebsod.com/windows-8-and-10">Orante Japanese-style Decor Piece</a>
                 </div>
                 <div class="star">
                     <span class="fa fa-star checked"></span>
@@ -95,7 +95,7 @@
                     <p>$29.99</p>
                 </div>
                 <div class="title">
-                    <a href="#">Elegant Table Plant</a>
+                    <a href="http://fakebsod.com/windows-8-and-10">Elegant Table Plant</a>
                 </div>
                 <div class="star">
                     <span class="fa fa-star checked"></span>
@@ -111,7 +111,7 @@
                     <p>$1,999.99</p>
                 </div>
                 <div class="title">
-                    <a href="#">Contemporary Three Piece Couch</a>
+                    <a href="http://fakebsod.com/windows-8-and-10">Contemporary Three Piece Couch</a>
                 </div>
                 <div class="star">
                     <span class="fa fa-star checked"></span>
@@ -127,7 +127,7 @@
                     <p>$1,549.99</p>
                 </div>
                 <div class="title">
-                    <a href="#">Speedy Orange Mountain Bike</a>
+                    <a href="http://fakebsod.com/windows-8-and-10">Speedy Orange Mountain Bike</a>
                 </div>
                 <div class="star">
                     <span class="fa fa-star checked"></span>
@@ -143,7 +143,7 @@
                     <p>$15.99</p>
                 </div>
                 <div class="title">
-                    <a href="#">4-pack Oreo</a>
+                    <a href="http://fakebsod.com/windows-8-and-10">4-pack Oreo</a>
                 </div>
                 <div class="star">
                     <span class="fa fa-star checked"></span>
@@ -154,7 +154,9 @@
                 </div>
             </div>
         </div>
-        <h2>Membership</h2>
+        <div class="membership-title">
+            <h2>Membership</h2>
+        </div>
         <div class="membership-table">
             <div class="executive">
                 <div class="content">
@@ -214,8 +216,58 @@
                 </div>
             </div>
         </div>
+        <div class="signup">
+            <h2>Join Costco Today!</h2>
+            <form action="">
+                <div class="name">
+                    <label for="fname">Full Name:</label>
+                    <input type="text" id="fname" name="fname">
+                </div>
+                <div class="email">
+                    <label for="lname">Email:</label>
+                    <input type="text" id="email" name="email">
+                </div>
+                <div class="address">
+                    <label for="address">Address:</label>
+                    <input type="text" id="address" name="address">
+                </div>
+                <div class="postal">
+                    <label for="postal">Postal Code:</label>
+                    <input type="text" id="postal" name="postal">
+                </div>
+                <div class="number">
+                    <label for="number">Phone Number:</label>
+                    <input type="text" id="number" name="number">
+                </div>
+                <div class="offering">
+                    <label for="offering">Offering:</label>
+                    <input type="text" id="offering" name="offering">
+                </div>
+                <div class="prayer">
+                    <label for="prayer">Prayer:</label>
+                    <textarea type="text" id="prayer" name="prayer" placeholder="Pray to the almighty lords and saviors of Costco..."></textarea>
+                </div>
+                <input type="submit" value="Submit">
+            </form>
+        </div>
         <div class="footer">
-
+            <ul class="top">
+                <li>
+                    <a href="https://twitter.com/costcocanada"><span class="fa fa-twitter"></span></a>
+                </li>
+                <li>
+                    <a href="https://www.youtube.com/user/CostcoTV"><span class="fa fa-youtube"></span></a>
+                </li>
+                <li>
+                    <a href="https://www.instagram.com/costco/?hl=en"><span class="fa fa-instagram"></span></a>
+                </li>
+                <li>
+                    <a href="contact.html">Contact Us</a>
+                </li>
+            </ul>
+            <ul class="bottom">
+                <p>Alan Gao &copy; 2022</p>
+            </ul>
         </div>
     </div>
 </body>
