i went to bed and just barely remembered to commit this
literally just comments

--- a/responsiveWebsite/best.html
+++ b/responsiveWebsite/best.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="site.css">
 </head>
 <body>
+    <!-- website div (identical to every other page that isnt home.html) -->
     <div class="website">
         <div class="logo">
             <a href="home.html"><img src="Images/costco.png" alt=""></a>
@@ -32,6 +33,7 @@
         </div>
 
         <div class="construction">
+            <!-- you love costco dont deny it -->
             <h1>ALL HAIL COSTCO THE BEST STORE THE BEST THING THE BEST PLACE WITH THE BEST FOOD AND PRODUCTS AT THE BEST PRICES WITH THE BEST MEMBERSHIP AND THE BEST CASHIERS AND BEST DEALS AND BEST MEMBERSHIPS AND BEST THOUGHTS AND BEST ENVIROMENT AND BEST ROOF AND BEST WALL AND BEST WINDOWS AND BEST FLOOR AND BEST CARTS AND BEST COOKIES AND BEST SNACKS</h1>
         </div>
     </div>
