--- a/responsiveWebsite/contact.html
+++ b/responsiveWebsite/contact.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="site.css">
 </head>
 <body>
+    <!-- website div (identical to every other page that isnt home.html) -->
     <div class="website">
         <div class="logo">
             <a href="home.html"><img src="Images/costco.png" alt=""></a>
@@ -32,6 +33,7 @@
         </div>
 
         <div class="construction">
+            <!-- shout costco -->
             <h1>if you want to contact costco shout "Costco" really loudly and costco god will come and help</h1>
         </div>
     </div>
