--- a/responsiveWebsite/about.html
+++ b/responsiveWebsite/about.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="site.css">
 </head>
 <body>
+    <!-- website div (identical to every other page that isnt home.html) -->
     <div class="website">
         <div class="logo">
             <a href="home.html"><img src="Images/costco.png" alt=""></a>
@@ -32,6 +33,7 @@
         </div>
 
         <div class="construction">
+            <!-- click on it -->
             <h1>click <a href="best.html">here</a> to learn more about costco</h1>
         </div>
     </div>
