--- a/responsiveWebsite/about.html
+++ b/responsiveWebsite/about.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="site.css">
+    <link rel="stylesheet" href="about.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
     <!-- website div (identical to every other page that isnt home.html) -->
@@ -32,9 +33,52 @@
             </ul>
         </div>
 
-        <div class="construction">
-            <!-- click on it -->
-            <h1>click <a href="best.html">here</a> to learn more about costco</h1>
+        <!-- content div -->
+        <div class="content">
+            <div class="about">
+                <!-- about section 1 -->
+                <h1>What is Costco?</h1>
+                <p>Costco Wholesale Corporation (doing business as Costco Wholesale and also known simply as Costco) is an American multinational corporation which operates a chain of membership-only big-box retail stores (warehouse club). As of 2020, Costco was the third largest retailer in the world, and the world's largest retailer of choice and prime beef, organic foods, rotisserie chicken, and wine as of 2016. In 2021, Costco was ranked #10 on the Fortune 500 rankings of the largest United States corporations by total revenue. Costco's worldwide headquarters are in Issaquah, Washington, an eastern suburb of Seattle, although its Kirkland Signature house label bears the name of its former location in Kirkland. Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa nulla sint tenetur totam aut rem? Natus debitis perspiciatis minima reprehenderit sunt eligendi necessitatibus doloribus voluptatem. Velit ipsa, asperiores, deleniti beatae doloremque quo voluptas officia maiores delectus tempora eius natus omnis saepe odit quaerat doloribus nostrum iste vel. Ipsam fugit assumenda laborum illo. Nulla, dolores error! Amet eligendi tempora fugit, neque culpa aut eos magnam rerum recusandae, totam incidunt veritatis fugiat nam magni soluta qui illo omnis enim excepturi reiciendis minima nesciunt id similique atque! Optio ullam, amet rerum consequuntur excepturi omnis, similique quidem repellendus doloribus quae itaque velit nostrum in.</p>
+            </div>
+            <!-- 2 images for color -->
+            <!-- images hide at certain screen dimension -->
+            <div class="image">
+                <img src="Images/hq.jpg" alt="">
+                <p>Costco Headquarters</p>
+            </div>
+            <div class="image">
+                <img src="Images/440px-CostcoTlalpan.jfif" alt="">
+                <p>Costco in Mexico City</p>
+            </div>
+            <!-- about section 2 -->
+            <div class="about2">
+                <!-- this header pops up when images dissapear -->
+                <h1>Additional Information</h1>
+                <p>The company opened its first warehouse (the chain's term for its retail outlets) in Seattle in 1983. Through mergers, however, Costco's corporate history dates back to 1976, when its former competitor Price Club was founded in San Diego, California. As of September 2022, Costco has 839 warehouses worldwide: 578 in the United States and Puerto Rico, 107 in Canada, 40 in Mexico, 31 in Japan, 29 in the United Kingdom, 17 in Korea, 14 in Taiwan, 13 in Australia, four in Spain, two each in France and China, one in Iceland, and one in New Zealand. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi suscipit quae dolores dolor saepe voluptate voluptates quaerat quibusdam asperiores repellat veritatis cum minus neque perferendis, totam, sint quod nobis obcaecati! Blanditiis facilis id harum amet maxime repudiandae enim velit magni quas, necessitatibus neque recusandae nihil optio mollitia ab delectus obcaecati beatae! Reiciendis, architecto? Blanditiis facere ratione sed rerum illo nisi facilis commodi non velit ducimus, quas beatae veritatis porro aperiam reiciendis repellat officia delectus ad! Nulla aut corrupti placeat, accusamus omnis commodi laborum ea cum veritatis quasi officiis atque quo consequatur repudiandae est reprehenderit vitae et numquam, at eos! Et. Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores unde reiciendis excepturi optio inventore laboriosam ab sunt maxime facere repudiandae?</p>
+            </div>
+        </div>
+
+        <!-- footer -->
+        <div class="footer">
+            <!-- top list of footer -->
+            <ul class="top">
+                <li>
+                    <a href="https://twitter.com/costcocanada"><span class="fa fa-twitter"></span></a>
+                </li>
+                <li>
+                    <a href="https://www.youtube.com/user/CostcoTV"><span class="fa fa-youtube"></span></a>
+                </li>
+                <li>
+                    <a href="https://www.instagram.com/costco/?hl=en"><span class="fa fa-instagram"></span></a>
+                </li>
+                <li>
+                    <a href="contact.html">Contact Us</a>
+                </li>
+            </ul>
+            <!-- bottom list of footer -->
+            <ul class="bottom">
+                <p>Alan Gao &copy; 2022</p>
+            </ul>
         </div>
     </div>
 </body>
