--- a/responsiveWebsite/best.html
+++ b/responsiveWebsite/best.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="site.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="best.css">
 </head>
 <body>
     <!-- website div (identical to every other page that isnt home.html) -->
@@ -32,9 +34,60 @@
             </ul>
         </div>
 
-        <div class="construction">
-            <!-- you love costco dont deny it -->
-            <h1>ALL HAIL COSTCO THE BEST STORE THE BEST THING THE BEST PLACE WITH THE BEST FOOD AND PRODUCTS AT THE BEST PRICES WITH THE BEST MEMBERSHIP AND THE BEST CASHIERS AND BEST DEALS AND BEST MEMBERSHIPS AND BEST THOUGHTS AND BEST ENVIROMENT AND BEST ROOF AND BEST WALL AND BEST WINDOWS AND BEST FLOOR AND BEST CARTS AND BEST COOKIES AND BEST SNACKS</h1>
+        <!-- box div -->
+        <div class="content">
+            <!-- clicakble boxes that bring you to the construction website (shadow appears on hover) -->
+            <a href="construction.html">
+                <div class="table">
+                    <h1>Reasons why Costco is the best:</h1>
+                    <p>Lorem ipsum dolor sit</p>
+                    <p>Lorem ipsum dolor sit</p>
+                    <p>Lorem ipsum dolor sit</p>
+                    <p>Lorem ipsum dolor sit</p>
+                    <p>Lorem ipsum dolor sit</p>
+                    <p>The best deals</p>
+                    <p>The snazziest thing</p>
+                    <p>Lorem ipsum dolor sit</p>
+                    <p>Lorem ipsum dolor sit</p>
+                    <p>The tastiest hotdogs</p>
+                    <p>The most rewarding rewards</p>
+                    <p>The most generous cashbacks</p>
+                    <p>Lorem ipsum dolor sit</p>
+                    <p>Lorem ipsum dolor sit</p>
+                    <p>All your friends agrees</p>
+                    <p>Lorem ipsum dolor sit</p>
+                    <p>Lorem ipsum dolor sit</p>
+                </div>
+            </a>
+            <a href="construction.html">
+                <div class="prayer">
+                    <h1>Recite this prayer:</h1>
+                    <p>Our Costco, who art in Red, hallowed be our name. In hotdog come and ketchup go, on earth as it is in the air, lorem ipsum dolor sit amet consectetur adipisicing elit. Sint ducimus incidunt saepe distinctio aspernatur, impedit sequi reprehenderit possimus minus veritatis pariatur tenetur ea laboriosam enim, assumenda non aperiam corporis quia dolores vel qui! Repellendus esse, sequi, ab quam tempora repudiandae maxime ipsam dolor fugiat nobis, odit eveniet molestiae quas voluptatibus.</p>
+                </div>
+            </a>
+        </div>
+
+        <!-- footer -->
+        <div class="footer">
+            <!-- top list of footer -->
+            <ul class="top">
+                <li>
+                    <a href="https://twitter.com/costcocanada"><span class="fa fa-twitter"></span></a>
+                </li>
+                <li>
+                    <a href="https://www.youtube.com/user/CostcoTV"><span class="fa fa-youtube"></span></a>
+                </li>
+                <li>
+                    <a href="https://www.instagram.com/costco/?hl=en"><span class="fa fa-instagram"></span></a>
+                </li>
+                <li>
+                    <a href="contact.html">Contact Us</a>
+                </li>
+            </ul>
+            <!-- bottom list of footer -->
+            <ul class="bottom">
+                <p>Alan Gao &copy; 2022</p>
+            </ul>
         </div>
     </div>
 </body>
