--- a/responsiveWebsite/construction.html
+++ b/responsiveWebsite/construction.html
@@ -7,7 +7,6 @@
     <title>Document</title>
     <link rel="stylesheet" href="site.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="contact.css">
 </head>
 <body>
     <!-- website div (identical to every other page that isnt home.html) -->
@@ -34,42 +33,9 @@
             </ul>
         </div>
 
-        <!-- big div that has the border -->
-        <div class="container">
-            <!-- header -->
-            <div class="head">
-                <h4>Want to Contact us?</h4>
-                <h5>Contact us here through this form today!</h5>
-            </div>
-            <!-- form -->
-            <!-- form looks better on mobile because its pretty empty without -->
-            <div class="form">
-                <form action="">
-                    <div class="box">
-                        <label for="fname">Full Name:</label><br>
-                        <input type="text" id="fname" name="fname">
-                    </div>
-                    <div class="box">
-                        <label for="lname">Email:</label><br>
-                        <input type="text" id="email" name="email">
-                    </div>
-                    <div class="box">
-                        <label for="number">Phone Number:</label><br>
-                        <input type="text" id="number" name="number">
-                    </div>
-                    <div class="box">
-                        <label for="inquiry">Type of Inquiry:</label><br>
-                        <input type="text" id="inquiry" name="inquiry">
-                    </div>
-                    <div class="box">
-                        <label for="message">Message:</label><br>
-                        <textarea type="text" id="message" name="message" placeholder="Insert message here..."></textarea>
-                    </div>
-                    <div class="box">
-                        <input type="submit" value="Send! Send! Send! Send!">
-                    </div>
-                </form>
-            </div>
+        <div class="construction">
+            <!-- shout costco -->
+            <h1>this part of the website is under construction</h1>
         </div>
 
         <!-- footer -->
