--- a/Global Chess Rankings/chess.html
+++ b/Global Chess Rankings/chess.html
@@ -46,7 +46,6 @@
     {
             name: "Magnus Carlsen",
             id: "1",
-            rank: 1,
             classicalRating: "2859",
             rapidRating: "2834",
             blitzRating: "2830",
@@ -55,7 +54,6 @@
         {
             name: "Ding Liren",
             id: "2",
-            rank: 2,
             classicalRating: "2811",
             rapidRating: "2829",
             blitzRating: "2788",
@@ -64,7 +62,6 @@
         {
             name: "Ian Nepomniachtchi",
             id: "3",
-            rank: 3,
             classicalRating: "2793",
             rapidRating: "2766",
             blitzRating: "2781",
@@ -73,7 +70,6 @@
         {
             name: "Alireza Firouzja ",
             id: "4",
-            rank: 4,
             classicalRating: "2785",
             rapidRating: "2745",
             blitzRating: "2903",
@@ -82,7 +78,6 @@
         {
             name: "Hikaru Nakamura",
             id: "5",
-            rank: 5,
             classicalRating: "2768",
             rapidRating: "2806",
             blitzRating: "2909",
@@ -91,7 +86,6 @@
         {
             name: "Fabiano Caruana",
             id: "6",
-            rank: 6,
             classicalRating: "2766",
             rapidRating: "2747",
             blitzRating: "2847",
@@ -100,7 +94,6 @@
         {
             name: "Anish Giri",
             id: "7",
-            rank: 7,
             classicalRating: "2764",
             rapidRating: "2721",
             blitzRating: "2792",
@@ -109,7 +102,6 @@
         {
             name: "Wesley So",
             id: "8",
-            rank: 8,
             classicalRating: "2760",
             rapidRating: "2787",
             blitzRating: "2763",
@@ -118,7 +110,6 @@
         {
             name: "Viswanathan Anand",
             id: "9",
-            rank: 9,
             classicalRating: "2754",
             rapidRating: "2731",
             blitzRating: "2734",
@@ -127,7 +118,6 @@
         {
             name: "Sergey Karjakin",
             id: "10",
-            rank: 10,
             classicalRating: "2747",
             rapidRating: "2736",
             blitzRating: "2647",
@@ -136,7 +126,6 @@
         {
             name: "Teimour Radjabov",
             id: "11",
-            rank: 11,
             classicalRating: "2747",
             rapidRating: "2718",
             blitzRating: "2709",
@@ -145,7 +134,6 @@
         {
             name: "Alexander Grischuk",
             id: "12",
-            rank: 12,
             classicalRating: "2745",
             rapidRating: "2759",
             blitzRating: "2847",
@@ -154,7 +142,6 @@
         {
             name: "Leinier Dominguez Perez",
             id: "13",
-            rank: 13,
             classicalRating: "2743",
             rapidRating: "2703",
             blitzRating: "2708",
@@ -163,7 +150,6 @@
         {
             name: "Shakhiyar Mamedyarov",
             id: "14",
-            rank: 14,
             classicalRating: "2741",
             rapidRating: "2747",
             blitzRating: "2734",
@@ -172,7 +158,6 @@
         {
             name: "Richard Rapport",
             id: "15",
-            rank: 15,
             classicalRating: "2740",
             rapidRating: "2802",
             blitzRating: "2613",
@@ -181,7 +166,6 @@
         {
             name: "Maxime Vachier-Lagrave",
             id: "16",
-            rank: 16,
             classicalRating: "2735",
             rapidRating: "2775",
             blitzRating: "2771",
@@ -190,7 +174,6 @@
         {
             name: "Levon Aronian",
             id: "17",
-            rank: 17,
             classicalRating: "2735",
             rapidRating: "2720",
             blitzRating: "2809",
@@ -199,7 +182,6 @@
         {
             name: "Jan-Krzysztof Duda",
             id: "18",
-            rank: 18,
             classicalRating: "2731",
             rapidRating: "2791",
             blitzRating: "2779",
@@ -208,7 +190,6 @@
         {
             name: "Vidit Santosh Gujrathi",
             id: "19",
-            rank: 19,
             classicalRating: "2729",
             rapidRating: "2617",
             blitzRating: "2654",
@@ -217,58 +198,34 @@
         {
             name: "Dmitry Andreikin",
             id: "20",
-            rank: 20,
             classicalRating: "2729",
             rapidRating: "2634",
             blitzRating: "2736",
             games: []
-        },
-        {
-            name: "Veselin Topalov",
-            id: "21",
-            rank: 21,
-            classicalRating: "2728",
-            rapidRating: "2627",
-            blitzRating: "2667",
-            games: []
-        },
-        {
-            name: "Le Quang Liem",
-            id: "22",
-            rank: 22,
-            classicalRating: "2728",
-            rapidRating: "2661",
-            blitzRating: "2642",
-            games: []
-        },
-        {
-            name: "Nikita Vitiugov",
-            id: "23",
-            rank: 23,
-            classicalRating: "2726",
-            rapidRating: "2622",
-            blitzRating: "2673",
-            games: []
-        },
+        }
     ];
 
     let playersString = JSON.stringify(players);
+    let data = JSON.parse(localStorage.getItem("data"))
 
-    localStorage.setItem("data", playersString);
+    if(localStorage.getItem("data")!=playersString){
+        data = JSON.parse(localStorage.getItem("data"))
+    }else{
+        localStorage.setItem("data", playersString);
+        data = JSON.parse(localStorage.getItem("data"));
+    }
 
-    let data = JSON.parse(localStorage.getItem("data"));
-
-    createTable(data);
     sort('classicalRating')
 
     function createTable(data){
         let tableBody = document.querySelector('tbody');
+        let i = 0;
         data.forEach(player => {
             const row = document.createElement('tr');
             let cell = document.createElement('td');
             let link = document.createElement('a');
             cell = document.createElement('td');
-            cell.textContent = player.rank;
+            cell.textContent = i+1;
             row.appendChild(cell);
             cell = document.createElement('td');
             link.href = 'players.html?id=' + player.id;
@@ -285,6 +242,7 @@
             cell.textContent = player.blitzRating;
             row.appendChild(cell);
             tableBody.appendChild(row);
+            i++
         });
     }
 
